--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3396,7 +3396,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "95b4b02f",
+   "id": "14f2c0d0",
    "metadata": {},
    "outputs": [
     {
@@ -4231,7 +4231,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "f35b93d7",
+   "id": "943d5698",
    "metadata": {},
    "outputs": [
     {
@@ -4479,7 +4479,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "ae4c058e",
+   "id": "078f76c4",
    "metadata": {},
    "outputs": [
     {
@@ -4512,7 +4512,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "374ffd30",
+   "id": "90b6dd61",
    "metadata": {},
    "outputs": [
     {
@@ -4547,7 +4547,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "0df2889a",
+   "id": "48491629",
    "metadata": {},
    "outputs": [
     {
@@ -4652,7 +4652,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "dd5019d2",
+   "id": "2c06b1a9",
    "metadata": {},
    "outputs": [
     {
@@ -4758,7 +4758,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "ab81cb13",
+   "id": "233b01b0",
    "metadata": {},
    "outputs": [
     {
@@ -4865,7 +4865,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a1d9d703",
+   "id": "fa77148b",
    "metadata": {},
    "outputs": [
     {
@@ -4972,7 +4972,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "80bd2935",
+   "id": "1653f593",
    "metadata": {},
    "outputs": [
     {
@@ -5008,7 +5008,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "6ead14ae",
+   "id": "71cfba9a",
    "metadata": {},
    "outputs": [
     {
@@ -5038,7 +5038,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "4dd60a86",
+   "id": "82883a47",
    "metadata": {},
    "outputs": [
     {
@@ -5077,7 +5077,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "7f2723d1",
+   "id": "e293ca75",
    "metadata": {},
    "outputs": [
     {
@@ -5104,7 +5104,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "70b9f248",
+   "id": "8e646a5f",
    "metadata": {},
    "outputs": [
     {
@@ -5446,7 +5446,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "2be8821c",
+   "id": "5354cdc0",
    "metadata": {},
    "outputs": [
     {
@@ -5467,7 +5467,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "28bf7d86",
+   "id": "c20bbbf7",
    "metadata": {},
    "outputs": [
     {
@@ -5500,7 +5500,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "17ef42f6",
+   "id": "911b7b05",
    "metadata": {},
    "outputs": [
     {
@@ -5521,7 +5521,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "58f488b1",
+   "id": "ba5b24ab",
    "metadata": {},
    "outputs": [
     {
@@ -5641,7 +5641,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "f7af9a50",
+   "id": "8a824640",
    "metadata": {},
    "outputs": [
     {
@@ -5763,7 +5763,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "7026df49",
+   "id": "b6946a1c",
    "metadata": {},
    "outputs": [
     {
@@ -5801,7 +5801,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "e048c6b2",
+   "id": "98bb6fa4",
    "metadata": {},
    "outputs": [
     {
@@ -5967,7 +5967,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "ffc6e9f1",
+   "id": "8bd990f5",
    "metadata": {},
    "outputs": [
     {
@@ -6000,7 +6000,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "31a9592d",
+   "id": "94ba1770",
    "metadata": {},
    "outputs": [
     {
@@ -6101,7 +6101,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "37b51ac8",
+   "id": "003bcbf6",
    "metadata": {},
    "outputs": [
     {
@@ -6201,6 +6201,390 @@
     "size_summary_df[\"% Overall Passing\"] = size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
     "\n",
     "size_summary_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "3f1acde5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "      <th>Spending Ranges (Per Student)</th>\n",
+       "      <th>School Size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4976</td>\n",
+       "      <td>$3,124,928.00</td>\n",
+       "      <td>$628.00</td>\n",
+       "      <td>77.048432</td>\n",
+       "      <td>81.033963</td>\n",
+       "      <td>66.680064</td>\n",
+       "      <td>81.933280</td>\n",
+       "      <td>54.642283</td>\n",
+       "      <td>$586-630</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "      <td>&lt;$585</td>\n",
+       "      <td>Medium (1000-2000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "      <td>$631-645</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2739</td>\n",
+       "      <td>$1,763,916.00</td>\n",
+       "      <td>$644.00</td>\n",
+       "      <td>77.102592</td>\n",
+       "      <td>80.746258</td>\n",
+       "      <td>68.309602</td>\n",
+       "      <td>79.299014</td>\n",
+       "      <td>54.289887</td>\n",
+       "      <td>$631-645</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "      <td>$586-630</td>\n",
+       "      <td>Medium (1000-2000)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     School Type  Total Students Total School Budget  \\\n",
+       "Bailey High School      District            4976       $3,124,928.00   \n",
+       "Cabrera High School      Charter            1858       $1,081,356.00   \n",
+       "Figueroa High School    District            2949       $1,884,411.00   \n",
+       "Ford High School        District            2739       $1,763,916.00   \n",
+       "Griffin High School      Charter            1468         $917,500.00   \n",
+       "\n",
+       "                     Per Student Budget  Average Math Score  \\\n",
+       "Bailey High School              $628.00           77.048432   \n",
+       "Cabrera High School             $582.00           83.061895   \n",
+       "Figueroa High School            $639.00           76.711767   \n",
+       "Ford High School                $644.00           77.102592   \n",
+       "Griffin High School             $625.00           83.351499   \n",
+       "\n",
+       "                      Average Reading Score  % Passing Math  \\\n",
+       "Bailey High School                81.033963       66.680064   \n",
+       "Cabrera High School               83.975780       94.133477   \n",
+       "Figueroa High School              81.158020       65.988471   \n",
+       "Ford High School                  80.746258       68.309602   \n",
+       "Griffin High School               83.816757       93.392371   \n",
+       "\n",
+       "                      % Passing Reading  % Overall Passing  \\\n",
+       "Bailey High School            81.933280          54.642283   \n",
+       "Cabrera High School           97.039828          91.334769   \n",
+       "Figueroa High School          80.739234          53.204476   \n",
+       "Ford High School              79.299014          54.289887   \n",
+       "Griffin High School           97.138965          90.599455   \n",
+       "\n",
+       "                     Spending Ranges (Per Student)         School Size  \n",
+       "Bailey High School                        $586-630   Large (2000-5000)  \n",
+       "Cabrera High School                          <$585  Medium (1000-2000)  \n",
+       "Figueroa High School                      $631-645   Large (2000-5000)  \n",
+       "Ford High School                          $631-645   Large (2000-5000)  \n",
+       "Griffin High School                       $586-630  Medium (1000-2000)  "
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "per_school_summary_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "8704d600",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     83.473852\n",
+       "District    76.956733\n",
+       "Name: Average Math Score, dtype: float64"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]\n",
+    "\n",
+    "type_math_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "d2845761",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "            \"Average Math Score\":type_math_scores,\n",
+    "            \"Average Reading Score\": type_reading_scores,\n",
+    "            \"% Passing Math\": type_passing_math,\n",
+    "            \"% Passing Reading\": type_passing_reading,\n",
+    "            \"% Overall Passing\": type_overall_passing})\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "781bd827",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Format the average math and reading scores to one decimal place\n",
+    "#Format the percentage of students passing math and reading to the nearest whole number \n",
+    "#Format the overall passing percentage to the nearest whole number \n",
+    "\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
    ]
   }
  ],
