--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3396,7 +3396,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "700a0d99",
+   "id": "432670e9",
    "metadata": {},
    "outputs": [
     {
@@ -4624,7 +4624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 94,
    "id": "0755887a",
    "metadata": {},
    "outputs": [
@@ -4653,13 +4653,6 @@
        "      <th>10th</th>\n",
        "      <th>11th</th>\n",
        "      <th>12th</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>school_name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4704,7 +4697,6 @@
       ],
       "text/plain": [
        "                            9th       10th       11th       12th\n",
-       "school_name                                                     \n",
        "Bailey High School    77.083676  76.996772  77.515588  76.492218\n",
        "Cabrera High School   83.094697  83.154506  82.765560  83.277487\n",
        "Figueroa High School  76.403037  76.539974  76.884344  77.151369\n",
@@ -4712,7 +4704,7 @@
        "Griffin High School   82.044010  84.229064  83.842105  83.356164"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4729,7 +4721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 95,
    "id": "15c842ba",
    "metadata": {},
    "outputs": [
@@ -4758,13 +4750,6 @@
        "      <th>10th</th>\n",
        "      <th>11th</th>\n",
        "      <th>12th</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>school_name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4809,7 +4794,6 @@
       ],
       "text/plain": [
        "                            9th       10th       11th       12th\n",
-       "school_name                                                     \n",
        "Bailey High School    81.303155  80.907183  80.945643  80.912451\n",
        "Cabrera High School   83.676136  84.253219  83.788382  84.287958\n",
        "Figueroa High School  81.198598  81.408912  80.640339  81.384863\n",
@@ -4817,7 +4801,7 @@
        "Griffin High School   83.369193  83.706897  84.288089  84.013699"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4835,7 +4819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 96,
    "id": "62407377",
    "metadata": {},
    "outputs": [
@@ -4868,54 +4852,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Bailey High School</th>\n",
-       "      <td>77.1</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>77.5</td>\n",
-       "      <td>76.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cabrera High School</th>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>83.6</td>\n",
        "      <td>83.1</td>\n",
-       "      <td>83.2</td>\n",
-       "      <td>82.8</td>\n",
-       "      <td>83.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Figueroa High School</th>\n",
-       "      <td>76.4</td>\n",
-       "      <td>76.5</td>\n",
-       "      <td>76.9</td>\n",
-       "      <td>77.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ford High School</th>\n",
-       "      <td>77.4</td>\n",
-       "      <td>77.7</td>\n",
-       "      <td>76.9</td>\n",
-       "      <td>76.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Griffin High School</th>\n",
-       "      <td>82.0</td>\n",
-       "      <td>84.2</td>\n",
-       "      <td>83.8</td>\n",
-       "      <td>83.4</td>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       9th  10th  11th  12th\n",
-       "Bailey High School    77.1  77.0  77.5  76.5\n",
-       "Cabrera High School   83.1  83.2  82.8  83.3\n",
-       "Figueroa High School  76.4  76.5  76.9  77.2\n",
-       "Ford High School      77.4  77.7  76.9  76.2\n",
-       "Griffin High School   82.0  84.2  83.8  83.4"
+       "                     9th  10th  11th  12th\n",
+       "Thomas High School  83.6  83.1  83.5  83.5"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4937,12 +4889,13 @@
     "  # Remove the index name.\n",
     "math_scores_by_grade.index.name = None\n",
     "  # Display the DataFrame.\n",
-    "math_scores_by_grade.head()"
+    "#math_scores_by_grade.head()\n",
+    "math_scores_by_grade.loc[[\"Thomas High School\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 97,
    "id": "eac098b9",
    "metadata": {},
    "outputs": [
@@ -4975,54 +4928,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Bailey High School</th>\n",
-       "      <td>81.3</td>\n",
-       "      <td>80.9</td>\n",
-       "      <td>80.9</td>\n",
-       "      <td>80.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cabrera High School</th>\n",
+       "      <th>Thomas High School</th>\n",
        "      <td>83.7</td>\n",
        "      <td>84.3</td>\n",
+       "      <td>83.6</td>\n",
        "      <td>83.8</td>\n",
-       "      <td>84.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Figueroa High School</th>\n",
-       "      <td>81.2</td>\n",
-       "      <td>81.4</td>\n",
-       "      <td>80.6</td>\n",
-       "      <td>81.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ford High School</th>\n",
-       "      <td>80.6</td>\n",
-       "      <td>81.3</td>\n",
-       "      <td>80.4</td>\n",
-       "      <td>80.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Griffin High School</th>\n",
-       "      <td>83.4</td>\n",
-       "      <td>83.7</td>\n",
-       "      <td>84.3</td>\n",
-       "      <td>84.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       9th  10th  11th  12th\n",
-       "Bailey High School    81.3  80.9  80.9  80.9\n",
-       "Cabrera High School   83.7  84.3  83.8  84.3\n",
-       "Figueroa High School  81.2  81.4  80.6  81.4\n",
-       "Ford High School      80.6  81.3  80.4  80.7\n",
-       "Griffin High School   83.4  83.7  84.3  84.0"
+       "                     9th  10th  11th  12th\n",
+       "Thomas High School  83.7  84.3  83.6  83.8"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5044,12 +4965,13 @@
     "  # Remove the index name.\n",
     "reading_scores_by_grade.index.name = None\n",
     "  # Display the data frame.\n",
-    "reading_scores_by_grade.head()"
+    "#reading_scores_by_grade.head()\n",
+    "reading_scores_by_grade.loc[[\"Thomas High School\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 98,
    "id": "131a4760",
    "metadata": {},
    "outputs": [
@@ -5074,7 +4996,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5085,7 +5007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 99,
    "id": "752e1de8",
    "metadata": {},
    "outputs": [
@@ -5103,7 +5025,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5115,7 +5037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 100,
    "id": "022d5714",
    "metadata": {},
    "outputs": [
@@ -5141,7 +5063,7 @@
        "Categories (4, interval[int64, right]): [(0, 585] < (585, 615] < (615, 645] < (645, 675]]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5154,7 +5076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 101,
    "id": "e5bdf390",
    "metadata": {},
    "outputs": [
@@ -5168,7 +5090,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5181,7 +5103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 102,
    "id": "1277becd",
    "metadata": {},
    "outputs": [
@@ -5216,6 +5138,7 @@
        "      <th>% Passing Reading</th>\n",
        "      <th>% Overall Passing</th>\n",
        "      <th>Spending Ranges (Per Student)</th>\n",
+       "      <th>School Size</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -5231,6 +5154,7 @@
        "      <td>81.933280</td>\n",
        "      <td>54.642283</td>\n",
        "      <td>$586-630</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cabrera High School</th>\n",
@@ -5244,6 +5168,7 @@
        "      <td>97.039828</td>\n",
        "      <td>91.334769</td>\n",
        "      <td>&lt;$585</td>\n",
+       "      <td>Medium (1000-2000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Figueroa High School</th>\n",
@@ -5257,6 +5182,7 @@
        "      <td>80.739234</td>\n",
        "      <td>53.204476</td>\n",
        "      <td>$631-645</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ford High School</th>\n",
@@ -5270,6 +5196,7 @@
        "      <td>79.299014</td>\n",
        "      <td>54.289887</td>\n",
        "      <td>$631-645</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Griffin High School</th>\n",
@@ -5283,6 +5210,7 @@
        "      <td>97.138965</td>\n",
        "      <td>90.599455</td>\n",
        "      <td>$586-630</td>\n",
+       "      <td>Medium (1000-2000)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5317,15 +5245,15 @@
        "Ford High School              79.299014          54.289887   \n",
        "Griffin High School           97.138965          90.599455   \n",
        "\n",
-       "                     Spending Ranges (Per Student)  \n",
-       "Bailey High School                        $586-630  \n",
-       "Cabrera High School                          <$585  \n",
-       "Figueroa High School                      $631-645  \n",
-       "Ford High School                          $631-645  \n",
-       "Griffin High School                       $586-630  "
+       "                     Spending Ranges (Per Student)         School Size  \n",
+       "Bailey High School                        $586-630   Large (2000-5000)  \n",
+       "Cabrera High School                          <$585  Medium (1000-2000)  \n",
+       "Figueroa High School                      $631-645   Large (2000-5000)  \n",
+       "Ford High School                          $631-645   Large (2000-5000)  \n",
+       "Griffin High School                       $586-630  Medium (1000-2000)  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5343,7 +5271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 103,
    "id": "41bb7228",
    "metadata": {},
    "outputs": [
@@ -5353,7 +5281,7 @@
        "73.27756047612857"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5364,7 +5292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 104,
    "id": "e4c51d5a",
    "metadata": {},
    "outputs": [
@@ -5379,7 +5307,7 @@
        "Name: % Overall Passing, dtype: float64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5397,7 +5325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 105,
    "id": "83cd36f8",
    "metadata": {},
    "outputs": [
@@ -5412,7 +5340,7 @@
        "Name: Average Math Score, dtype: float64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5423,7 +5351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 106,
    "id": "4d32f135",
    "metadata": {},
    "outputs": [
@@ -5433,7 +5361,7 @@
        "73.27756047612857"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5444,7 +5372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 107,
    "id": "7083813d",
    "metadata": {},
    "outputs": [
@@ -5544,7 +5472,7 @@
        "$646-675                               53.526855  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5564,7 +5492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 108,
    "id": "05e60e1b",
    "metadata": {},
    "outputs": [
@@ -5609,33 +5537,33 @@
        "      <th>&lt;$585</th>\n",
        "      <td>83.5</td>\n",
        "      <td>83.9</td>\n",
-       "      <td>93</td>\n",
-       "      <td>97</td>\n",
-       "      <td>90</td>\n",
+       "      <td>93.5</td>\n",
+       "      <td>96.6</td>\n",
+       "      <td>90.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>$586-630</th>\n",
        "      <td>81.9</td>\n",
        "      <td>83.2</td>\n",
-       "      <td>87</td>\n",
-       "      <td>93</td>\n",
-       "      <td>81</td>\n",
+       "      <td>87.1</td>\n",
+       "      <td>92.7</td>\n",
+       "      <td>81.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>$631-645</th>\n",
        "      <td>78.5</td>\n",
        "      <td>81.6</td>\n",
-       "      <td>73</td>\n",
-       "      <td>84</td>\n",
-       "      <td>63</td>\n",
+       "      <td>73.5</td>\n",
+       "      <td>84.4</td>\n",
+       "      <td>62.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>$646-675</th>\n",
        "      <td>77.0</td>\n",
        "      <td>81.0</td>\n",
-       "      <td>66</td>\n",
-       "      <td>81</td>\n",
-       "      <td>54</td>\n",
+       "      <td>66.2</td>\n",
+       "      <td>81.1</td>\n",
+       "      <td>53.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5651,20 +5579,20 @@
        "\n",
        "                              % Passing Math % Passing Reading  \\\n",
        "Spending Ranges (Per Student)                                    \n",
-       "<$585                                     93                97   \n",
-       "$586-630                                  87                93   \n",
-       "$631-645                                  73                84   \n",
-       "$646-675                                  66                81   \n",
+       "<$585                                   93.5              96.6   \n",
+       "$586-630                                87.1              92.7   \n",
+       "$631-645                                73.5              84.4   \n",
+       "$646-675                                66.2              81.1   \n",
        "\n",
        "                              % Overall Passing  \n",
        "Spending Ranges (Per Student)                    \n",
-       "<$585                                        90  \n",
-       "$586-630                                     81  \n",
-       "$631-645                                     63  \n",
-       "$646-675                                     54  "
+       "<$585                                      90.4  \n",
+       "$586-630                                   81.4  \n",
+       "$631-645                                   62.9  \n",
+       "$646-675                                   53.5  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5675,18 +5603,18 @@
     "\n",
     "spending_summary_df[\"Average Reading Score\"] = spending_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
     "\n",
-    "spending_summary_df[\"% Passing Math\"] = spending_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "spending_summary_df[\"% Passing Math\"] = spending_summary_df[\"% Passing Math\"].map(\"{:.1f}\".format)\n",
     "\n",
-    "spending_summary_df[\"% Passing Reading\"] = spending_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "spending_summary_df[\"% Passing Reading\"] = spending_summary_df[\"% Passing Reading\"].map(\"{:.1f}\".format)\n",
     "\n",
-    "spending_summary_df[\"% Overall Passing\"] = spending_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "spending_summary_df[\"% Overall Passing\"] = spending_summary_df[\"% Overall Passing\"].map(\"{:.1f}\".format)\n",
     "\n",
     "spending_summary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 109,
    "id": "f2e21dd5",
    "metadata": {},
    "outputs": [
@@ -5711,7 +5639,7 @@
        "Name: school_name, dtype: int64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5724,7 +5652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 110,
    "id": "c6b07dce",
    "metadata": {},
    "outputs": [
@@ -5874,7 +5802,7 @@
        "Wright High School                            <$585  Medium (1000-2000)  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5890,7 +5818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 111,
    "id": "03033f65",
    "metadata": {},
    "outputs": [
@@ -5904,7 +5832,7 @@
        "Name: Average Math Score, dtype: float64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6514,7 +6442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b7c4dc1",
+   "id": "80ffcefb",
    "metadata": {},
    "outputs": [],
    "source": []
