--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "abc42a06",
    "metadata": {},
    "outputs": [
@@ -1126,7 +1126,7 @@
        "9          84  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "7380d72e",
    "metadata": {},
    "outputs": [
@@ -1272,7 +1272,7 @@
        "4          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "0e6283b5",
    "metadata": {},
    "outputs": [
@@ -1295,7 +1295,7 @@
        "39170"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "557c6793",
    "metadata": {},
    "outputs": [
@@ -1318,7 +1318,7 @@
        "15"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "0437db57",
    "metadata": {},
    "outputs": [
@@ -1346,7 +1346,7 @@
        "       'Thomas High School'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "efcd8930",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1368,7 @@
        "24649428"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "985140f2",
    "metadata": {},
    "outputs": [
@@ -1391,7 +1391,7 @@
        "24649428"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "de66846d",
    "metadata": {},
    "outputs": [
@@ -1414,7 +1414,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "6b99bde9",
    "metadata": {},
    "outputs": [
@@ -1437,7 +1437,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "122d13af",
    "metadata": {},
    "outputs": [
@@ -1471,7 +1471,7 @@
        "Name: math_score, Length: 39170, dtype: bool"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "1d9b6e63",
    "metadata": {},
    "outputs": [
@@ -1613,7 +1613,7 @@
        "8          87          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "40c8191a",
    "metadata": {},
    "outputs": [],
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "74f47a08",
    "metadata": {},
    "outputs": [
@@ -1647,7 +1647,7 @@
        "29370"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,39 +1658,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "b13b748a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate the number of students passing math.\n",
-    "passing_math_count = passing_math[\"student_name\"].count()\n",
-    "\n",
-    "# Calculate the number of students passing reading.\n",
-    "passing_reading_count = passing_reading[\"student_name\"].count()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
-   "id": "a3a983b8",
+   "id": "b13b748a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Student ID       29370\n",
-       "student_name     29370\n",
-       "gender           29370\n",
-       "grade            29370\n",
-       "school_name      29370\n",
-       "reading_score    29370\n",
-       "math_score       29370\n",
-       "School ID        29370\n",
-       "type             29370\n",
-       "size             29370\n",
-       "budget           29370\n",
-       "dtype: int64"
+       "(29370, 33610)"
       ]
      },
      "execution_count": 26,
@@ -1699,7 +1674,13 @@
     }
    ],
    "source": [
-    "passing_math.count()"
+    "# Calculate the number of students passing math.\n",
+    "passing_math_count = passing_math[\"student_name\"].count()\n",
+    "\n",
+    "# Calculate the number of students passing reading.\n",
+    "passing_reading_count = passing_reading[\"student_name\"].count()\n",
+    "\n",
+    "passing_math_count, passing_reading_count"
    ]
   },
   {
