--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3c0cb566",
    "metadata": {
     "scrolled": true
@@ -176,7 +176,7 @@
        "9          84  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "41cb6a0b",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a24646df",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "[461 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2c54180f",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3bdac165",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
        "39169           95.0        75.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "617e747b",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
        "39169           95.0        75.0         14  Charter  1635  1043130  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "5a7049e6",
    "metadata": {},
    "outputs": [],
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e6d63d3f",
    "metadata": {},
    "outputs": [],
@@ -798,10 +798,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "7b95de14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(461, 39170, 38709)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Step 1. Get the number of students that are in ninth grade at Thomas High School.\n",
     "# These students have no grades. \n",
@@ -814,35 +825,54 @@
     "# Thomas High School from the total student count to get the new total student count.\n",
     "new_total = student_count - sub_num\n",
     "\n",
-    "#sub_num, student_count, new_total"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "e87edb4c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate the passing rates using the \"clean_student_data\".\n",
-    "passing_math_count = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)].count()[\"student_name\"]\n",
-    "passing_reading_count = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
-    "\n",
-    "#passing_math_count"
+    "sub_num, student_count, new_total"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "e87edb4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28939 33158\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the passing rates using the \"clean_student_data\".\n",
+    "passing_math_count = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)].count()[\"student_name\"]\n",
+    "passing_reading_count = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
+    "\n",
+    "print(passing_math_count, passing_reading_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "b9f5ec11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(74.76039164018704, 85.6596657108166)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Step 3. Calculate the passing percentages with the new total student count.\n",
     "passing_math_percentage = passing_math_count / new_total * 100\n",
     "passing_reading_percentage = passing_reading_count / new_total * 100\n",
     "\n",
-    "#passing_math_percentage"
+    "passing_math_percentage, passing_reading_percentage"
    ]
   },
   {
